feat(foundation): v1.0.0 baseline — virtual threads, observability, cache, rate limit, idempotency, outbox, security hardening, multi-stage Docker, full local stack
- pom.xml: bump to 1.0.0; add Spring Cache, Data Redis, Data Elasticsearch,
  OAuth2 client, Caffeine, Bucket4j, Resilience4j, Micrometer Prometheus +
  OTel tracing, logstash JSON encoder, OpenPDF, dev.samstevens TOTP,
  commons-csv, Testcontainers (postgres, elasticsearch); add Maven Central
  fallback so the build is not pinned to internal proxy
- application.yaml: enable virtual threads, multi-bucket cache config,
  Redis + ES config, OAuth2 client placeholders, configurable CORS/rate
  limits/abandoned-cart/payouts/loyalty/recommendations/search; full
  Resilience4j retry + circuit-breaker config; Prometheus + OTLP tracing
  exposed via management endpoints; structured JSON logs in cloud profile
- multi-stage Dockerfile (build with maven:3-sapmachine-25, run on slim
  sapmachine-25-jre as non-root, ZGC, healthcheck)
- docker-compose: postgres 17, redis, elasticsearch 8, minio, mailhog,
  prometheus, jaeger
- New cross-cutting:
  * BaseAuditableEntity + SpringSecurityAuditorAware
  * DomainEvent (sealed) + DomainEvents catalogue + OutboxEvent +
    OutboxRelayWorker (transactional outbox pattern)
  * IdempotencyKey entity/service for safe retries on mutating endpoints
  * RateLimitFilter (Bucket4j token bucket) with auth/payment/default
    categories
  * AsyncConfig (virtual-thread executor + cron scheduler), CacheConfig
    (Caffeine), LocaleConfig (Accept-Language)
- Security:
  * Customer + AdminUser entities extended with verification, lockout,
    MFA, OAuth, loyalty, customer-group, store-credit columns
  * New CustomerUserDetailsService + CompositeUserDetailsService so
    customer JWTs resolve correctly (P0 fix)
  * SecurityConfiguration: per-profile CORS allow-list, BCrypt 12 rounds,
    public catalog GETs, OAuth2 login mounted only when registrations
    exist, RateLimitFilter + JwtReques